CREATE TYPE "Status" AS ENUM (
    'active',
    'inactive'
    );

CREATE TYPE "Availability" AS ENUM (
    'available',
    'not_available'
    );

CREATE TABLE "products"
(
    "id"          int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name"        varchar(255)  UNIQUE NOT NULL,
    "is_active"   bool          NOT NULL DEFAULT true,
    "category_id" int,
    "threshold"   int,
    "created_at" timestamp DEFAULT now(),
    "updated_at" timestamp DEFAULT now()
);

CREATE TABLE "branches"
(
    "id"         int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name"       varchar(255) NOT NULL,
    "created_at" timestamp DEFAULT now(),
    "updated_at" timestamp DEFAULT now()
);

CREATE TABLE "categories"
(
    "id"         int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name"       varchar(255) NOT NULL,
    "created_at" timestamp DEFAULT now(),
    "updated_at" timestamp DEFAULT now()
);

CREATE TABLE "product_branch"
(
    "id"            int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "product_id"    int            NOT NULL,
    "stock"         integer        NOT NULL,
    "price"         decimal(10, 2) NOT NULL,
    "branch_id"     int            NOT NULL,
    "branch_status" "Status"       NOT NULL DEFAULT 'active',
    "availability"  "Availability" NOT NULL DEFAULT 'available',
    "created_at" timestamp DEFAULT now(),
    "updated_at" timestamp DEFAULT now(),
    CONSTRAINT "chk_no_negative_stocks" CHECK (stock >= 0)
);

CREATE UNIQUE INDEX ON "products" ("id");

CREATE UNIQUE INDEX ON "products" ("name");

CREATE UNIQUE INDEX ON "branches" ("id");

CREATE UNIQUE INDEX ON "branches" ("name");

CREATE UNIQUE INDEX ON "categories" ("id");

CREATE UNIQUE INDEX ON "categories" ("name");

CREATE UNIQUE INDEX "branch_product" ON "product_branch" ("branch_id", "product_id");

CREATE UNIQUE INDEX ON "product_branch" ("id");

ALTER TABLE "products"
    ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "product_branch"
    ADD FOREIGN KEY ("product_id") REFERENCES "products" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "product_branch"
    ADD FOREIGN KEY ("branch_id") REFERENCES "branches" ("id") DEFERRABLE INITIALLY IMMEDIATE;
