
Enum "Status" {
  "active"
  "inactive"
}

Enum "Availability" {
  "available"
  "not_available"
}

Table "products" {
  "id" int [pk, increment]
  "name" varchar(255) [unique, not null]
  "is_active" bool [not null, default: true]
  "category_id" int
  "threshold" int
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

  Indexes {
    id [unique]
    name [unique]
  }
}

Table "branches" {
  "id" int [pk, increment]
  "name" varchar(255) [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

  Indexes {
    id [unique]
    name [unique]
  }
}

Table "categories" {
  "id" int [pk, increment]
  "name" varchar(255) [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

  Indexes {
    id [unique]
    name [unique]
  }
}

Table "product_branch" {
  "id" int [pk, increment]
  "product_id" int [not null]
  "stock" integer [not null]
  "price" decimal(10,2) [not null]
  "branch_id" int [not null]
  "branch_status" Status [not null, default: 'active']
  "availability" Availability [not null, default: 'available']
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

  Checks {
    `stock >= 0` [name: 'chk_no_negative_stocks']
  }

  Indexes {
    (branch_id, product_id) [unique, name: "branch_product"]
    id [unique]
  }
}

Ref:"categories"."id" ?<? "products"."category_id"

Ref:"products"."id" <? "product_branch"."product_id" [delete: cascade]

Ref:"branches"."id" <? "product_branch"."branch_id"
